# NitroCppTest-DabisaKelava

./: CMakeLists.txt  README.md
cmake/: googletest.cmake  jsoncpp.cmake
src/: CMakeLists.txt
src/rect/: CMakeLists.txt  main.cpp
src/rectlib/: CMakeLists.txt  intersection_tree.cpp  intersection_tree.h  interval.cpp  interval.h  json_rectangle_reader.cpp  json_rectangle_reader.h  rectangle.cpp  rectangle.h
test/: CMakeLists.txt
test/rectlib/: CMakeLists.txt  test_intersection_tree.cpp  test_interval.cpp  test_json_rectangle_reader.cpp  test_rectangle.cpp
test/rectlib/examples/: invalid_data.json  nitro_duplicated.json  parse_error.json
